--- a/portfolio/static/css/main.css
+++ b/portfolio/static/css/main.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
 
 .navbar{
-    background-color:rgb(0, 126, 130);
+    background-color:rgb(216, 235, 236);
     height: 70px;
     font-family: 'Oswald', sans-serif;
     font-size: large;
@@ -22,7 +22,7 @@
   }
 
   body{
-    background-color: rgba(169, 169, 169, 0.904);
+    background-color:burlywood;
   }
   
   .jumbotron{
